k8s/manifests/overlays/k3s/infrastructure/monitoring-ingress-overwrite.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana
  rules:
    - host: grafana
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-stack-grafana
                port:
                  number: 80
